--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^13.0.0",
-    "@testing-library/user-event": "^13.2.1",
+    "@testing-library/user-event": "14.4.3",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.2.1",
@@ -24,28 +24,27 @@
   },
   "eslintConfig": {
     "extends": [
-    "react-app",
-    "react-app/jest",
-    "prettier"
+      "react-app",
+      "react-app/jest",
+      "prettier"
     ],
     "plugins": [
-    "prettier",
-    "cypress"
+      "prettier",
+      "cypress"
     ],
     "env": {
-    "cypress/globals": true
+      "cypress/globals": true
     },
     "rules": {
-    "prettier/prettier": "warn"
+      "prettier/prettier": "warn"
     }
-    },
+  },
   "prettier": {
-      "arrowParens": "avoid",
-      "bracketSpacing": false,
-      "singleQuote": true,
-      "trailingComma": "all"
-    },
-      
+    "arrowParens": "avoid",
+    "bracketSpacing": false,
+    "singleQuote": true,
+    "trailingComma": "all"
+  },
   "browserslist": {
     "production": [
       ">0.2%",
